@@ -21,7 +21,7 @@ bool CPictureThumbLoader::LoadItem(CFileItem* pItem)
     CFile::Delete(pItem->GetThumbnailImage());
     pItem->SetThumbnailImage("");
   }
-  if ((pItem->IsPicture() && !pItem->IsZIP() && !pItem->IsRAR() && !pItem->IsCBZ() && !pItem->IsCBR() ) && !pItem->HasThumbnail())
+  if ((pItem->IsPicture() && !pItem->IsZIP() && !pItem->IsRAR() && !pItem->IsCBZ() && !pItem->IsCBR() && !pItem->IsPlayList()) && !pItem->HasThumbnail())
   { // load the thumb from the image file
     CPicture pic;
     pic.CreateThumbnail(pItem->m_strPath);
