@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 26-12-2005 added: custom slideshows in My Pictures via m3u playlists (only images are queued into the slideshow)
  - 26-12-2005 fixed: music nav, the "* All *" items could not be queued to the playlist
  - 26-12-2005 changed: music nav, minor speed improvement of loading all songs from database
  - 26-12-2005 fixed: FileItem attribute CanQueue was not saved or copyed to another object
